# raft

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/raft/: __main__.py  app.py  config.py  enums.py  http_client.py  models.py  node.py  router.py
tests/: conftest.py
tests/integration/: test_cluster.py
tests/unit/: test_append.py  test_state_machine.py  test_vote.py
